static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Lato&display=swap');

.navbar {
    padding-top: 1rem;
    padding-bottom: 1rem;
    padding-left: 1rem;
    padding-right: 1rem;
    background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png"),
    linear-gradient(to right,  #ffffff, #ffffff, #0ca9a9, #0ca9a9, #0ca9a9, #0ca9a9);
    box-shadow: 10px 10px 15px rgb(0 0 0 / 15%);

}

.navbar-brand {
    font-size: 2rem;
}


.footer {
    font-family: Helvetica, sans-serif;
    color: #0f8787;
    background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png"),
    linear-gradient(to right,  #ffffff, #ffffff, #0ca9a9, #0ca9a9, #0ca9a9, #0ca9a9);
}

footer a {
    color: #0f8787;
}

.footer-box {
    background-color: white;
    width: 20%;
    margin-left: 40%;
    border-radius: 50px;
    padding: 0.5rem;
    border: 2px solid #0f8787;
}

.logo-text {
    color: #0ca9a9;
    font-size: x-large;
}

.nav-link{
    background-color:white;
    margin-right: 10px;
    border-radius: 25px;
    border: solid 2px #0f8787;
}

.pse-logo {
    color: #f5f5f5;
    background-color: #0ca9a9;
    border-radius: 50%;
    padding: 0.5rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    font-size: 1.8rem;
}

.navbar-light .navbar-nav .nav-link {
    color: #0f8787;
    padding-right: 1rem;
    padding-left: 1rem;
}

#home-hero {
    margin-top: 7rem;
    margin-bottom: 1.5rem;
    padding-bottom: 1rem;
    padding-left: 2rem;
    padding-right: 2rem;
    text-align: center;
    color: white;
    background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png");
    background-color:#0ca9a9;
    border: solid 2px white;
    border-radius: 15px;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
    position: relative;
}

h1, h2 {
    color: white;
    text-align: center;
}

#hero-text {
    font-family: lato, sans-serif;
    text-transform: uppercase;
    letter-spacing: 5px;
    padding-top: 20px;
}

#hero-text h1 {
    font-size: x-large;
}

#hero-strap-text {
    font-family: Helvetica, sans-serif;
    text-transform: none;
}

.heading {
        margin-top: 1rem;
        margin-bottom: 1.5rem;
        padding: 0.5rem;
        text-align: center;
        width: 80%;
        color: white;
        background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png");
        background-color:#0ca9a9;
        border: solid 2px white;
        border-radius: 15px;
        margin-left: 10%;
        box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.main-bg {
    background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/vertical-waves.png"),
    linear-gradient(to right, #ffffff, #ffffff, #23BBBB);
}

.card-item {
    width: 90%;
    height: 90%;
    background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png");
    background-color:#0ca9a9;
    border: solid 2px white;
    border-radius: 15px;
    margin-top: 1rem;
    margin-left: 5%;
    padding-bottom: 20%;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.form-container {
    width: 70%;
    background-image: url("https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png");
    background-color:#0ca9a9;
    border: solid 2px white;
    border-radius: 15px;
    margin-top: 7rem;
    margin-left: 15%;
    margin-bottom: 2rem;
    padding-top: 2rem;
    padding-bottom: 2rem;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.form-row {
    color: white;
    text-align: center;
    width: 80%;
    margin-left: 10%;
    background-color: rgba(59, 62, 84, 0.3);
}

.text-container {
    width: 80%;
    background: #0ca9a9;
    border: solid 2px white;
    border-radius: 15px;
    margin-top: 1rem;
    margin-left: 10%;
    padding-bottom: 1rem;
    box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.block-text {
    background: white;
    text-align: center;
    width: 95%;
    padding: 1rem;
    margin-top: 1rem;
    margin-left: 2.5%;
    border-radius: 15px;
}

.card-img-top {
    width: 90%;
    border: solid 2px white;
    border-radius: 15px;
    margin-left: 5%;
    margin-top: 5%;
}

.card-body {
    width: 90%;
    background: white;
    margin-top: 1rem;
    margin-left: 5%;
    border-radius: 15px;
}

.hero-image {
    border: solid 2px white;
    border-radius: 15px;
    width: 100%;
}

.passport-container {
        width: 92%;
        background-image: url(https://res.cloudinary.com/djck2eqxo/image/upload/v1666627962/scribble-light_ubbfq8.png);
        background-color: #0ca9a9;
        border: solid 2px white;
        border-radius: 15px;
        margin-top: 7rem;
        margin-left: 4%;
        margin-bottom: 2rem;
        padding: 3vw;
        box-shadow: 10px 10px 15px rgb(0 0 0 / 50%);
}

.passport-separator-rule {
    color: white;
    width: 50%;
    margin-left: 25%;
    margin-top: 2rem;
}

.passport-item {
    width: 90%;
    border: solid 2px white;
    border-radius: 15px;
    margin-top: 5%;
}

.passport-title {
    font-size: 5vw;
    color: #0B5657
}

.vert-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.passport-title-row {
    background-color: white;
    padding: 1rem;
    border-radius: 25px;
    border: solid 2px #0B5657;
    margin-top: 1rem;
}

.passport-text-row {
    width: 100%;
    background-color: white;
    padding: 1rem;
    border-radius: 25px;
    border: solid 2px #0B5657;
    margin-top: 1rem;
}


.passport-text-item {
    font-size: 2vw;
    color: #0B5657;
    margin-left: 2vw;
    margin-top: 1vw;
}

.passport-info-text {
    width: 50%;
    display: inline;
}

.passport-info-data {
    display: inline;
    width: 50%;
    color: #9500a0
}


.passport-cloudinary-item {
    width: 100%;
}

.block-text {
    background: white;
    text-align: center;
    width: 95%;
    padding: 1rem;
    margin-top: 1rem;
    margin-left: 2.5%;
    border-radius: 15px;
}

.callout-container {
    height: 100vh;    
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.opaque-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
}

.content-container {
    padding-top: 75px;
    padding-bottom: 75px;
}

